--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "express": "^4.17.1",
+    "i18next": "^19.4.4",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
