--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "chart.js": "^2.9.3",
+    "clsx": "^1.1.0",
     "express": "^4.17.1",
     "i18next": "^19.4.4",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.13",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.4.0",
     "react-router-dom": "^5.2.0",
